--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <ListView
         android:id="@+id/lv_contacts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_new_contact"
