--- a/app/src/main/res/layout/contacts_item_layout.xml
+++ b/app/src/main/res/layout/contacts_item_layout.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deletar"
+        android:onClick="deleteItem"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
