--- a/app/src/main/res/layout/contacts_item_layout.xml
+++ b/app/src/main/res/layout/contacts_item_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,24 +10,33 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/tv_contact_item_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
 
-    <Button
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_contact_item_name" />
+
+
+    <ImageButton
+        android:id="@+id/bt_delete_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deletar"
-        android:onClick="deleteItem"/>
+        android:layout_alignBottom="@+id/tv_contact_item_phone"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@android:drawable/ic_delete" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000"
-        android:layout_marginTop="4dp"
-        ></View>
-</LinearLayout>
+
+</RelativeLayout>
